Correções fonts, tamnhos

--- a/index.html
+++ b/index.html
@@ -502,16 +502,13 @@
 
                 </ul>-->
 
-                <div class="conteudo-rede-social">
-                  <a class="facebook-icon1" href="https://www.facebook.com/NutricionistaRodrigoOliveira" target="_blank" title="Facebook"><img class="" src="img/facebook.png" alt="link do facebook"></a>
-                  <a class="instagram-icon1" href="https://www.instagram.com/r_odrigo.oliveira/" target="_blank" title="Instagram"><img class="" src="img/instagram.png" alt="link do instagram"></a>
-                </div>
+                
 
 
                 <div class="container-fluid" id=social-box>
 
 
-                  <div class="fb-like" data-href="https://www.facebook.com/NutricionistaRodrigoOliveira" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
+                  
 
 
 
@@ -653,7 +650,7 @@
 
   <footer>
 
-    <div class="conteudo-footer4">
+    <div class="">
 
       <!--<h2 class="h2-font">Teste de conteúdo</h2>-->
 
@@ -663,7 +660,7 @@
         <a class="linkrodape" href="#" alt="Link para início do site" title="INÍCIO"><img class="img-logo2 img-responsive" src="img/logoRod.png" alt="Marca do atleta Rodrigo de Oliveira">
         </a>
 
-        <div class=box-disqus>
+        <div class="box-disqus">
 
           <div id="disqus_thread"></div>
           <script>
